--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "knex": "^2.1.0",
+    "nodemon": "^2.0.18",
     "pg": "^8.7.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.16"
   }
 }
